<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, VietnameseTTSActivity!</string>
    <string name="app_name">VietnameseTTS</string>
    <string name="hint_edittext">Gõ tiếng Việt vào đây..</string>
    <string name="submit_button">Submit</string>
    <string name="choose_button">Chọn file</string>
    <string name="checkbox">Nhập text</string>
    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="exit_button">Thoát</string>
</resources>