<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="320dp"
    android:orientation="vertical">

    //thanh dau tien theo chieu ngang chua mot TextView


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Input"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background_color"
            android:gravity="top"
            android:hint="@string/hint_edittext"
            android:scrollbars="vertical"
            android:textSize="15dp" />
    </LinearLayout>

    //thanh thu 2 co 2 nut va mot check box

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:textSize="10dp" />

        <Button
            android:id="@+id/Choose"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_button"
            android:textSize="10dp" />

        <CheckBox
            android:id="@+id/Get_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:textSize="10dp" />"
    </LinearLayout>


    //thnh thu 3

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="@color/background_color"
            android:scrollbars="vertical" />
    </LinearLayout>

    //thanh thu 4 co mot thanh truot

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/Loading_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    //thanh thu 5 co 3 nut bam va mot thanh truot

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:textSize="10dp" />

        <Button
            android:id="@+id/stop"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:textSize="10dp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/exit_button"
            android:textSize="10dp" />
    </LinearLayout>

</LinearLayout>